# ROBOBTC2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DELIVERABLES.md  Dockerfile  README.md  README_MELHORIAS.md  dashboard.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
config/: .env.example  config.yaml
data/news_cache/: 2023-02-03.json  2023-03-09.json  2023-05-11.json  2023-08-05.json  2023-10-29.json  2025-02-14.json
data/onchain/: onchain_features_20250627_180501.parquet  onchain_raw_20250627_180501.parquet
docs/: API_DOCUMENTATION.md  EXECUTIVE_SUMMARY.md  TECHNICAL_REPORT.md  USER_GUIDE.md
logs/: trades.csv
robo_btc_api/: main.py
robo_btc_api/routes/: trading.py
robo_btc_api/static/: index.html
scripts/: ping_test.py
src/btc_perp_trader/: __main__.py  check_env.py  cli.py  config.py  strategy.py
src/btc_perp_trader/backtest/: backtester.py  generate_report.py  vectorbt_backtest.py
src/btc_perp_trader/collectors/: binance_user_ws.py  binance_ws.py  cryptopanic_collector.py  data_manager.py  feargreed_collector.py  news_collector.py  newsapi_collector.py  onchain.py  orderbook_ws.py  reddit_collector.py
src/btc_perp_trader/dashboard/: app.py
src/btc_perp_trader/data/: fetch_binance.py  fetch_news_history.py
src/btc_perp_trader/execution/: binance_adapter.py  execution_engine.py  order_manager_stub.py
src/btc_perp_trader/features/: feature_engineering.py  indicators.py
src/btc_perp_trader/models/: __init__.py  base_model.py  build_dataset.py  ensemble_model.py  (+4 more)
src/data/: binance_train.parquet  btc_1m_2025-06-30.csv  btc_feats_2025-06-30.pkl  headlines.json
src/models/: default.pkl  online_river.pkl
state/: bandit_rr.json
tests/: test_api.py  test_collectors.py  test_features.py  test_integration.py  test_models.py  test_risk.py
trading-dashboard/: index.html
trading-dashboard/src/: App.jsx
trading_api/: __init__.py
trading_api/src/: main.py
(+7 files in other folders)
